Fix text alignment issues

--- a/static/less/pages/courses.less
+++ b/static/less/pages/courses.less
@@ -20,6 +20,7 @@
             margin: 0 15px 0 0;
             padding: 0;
             display: inline-block;
+            text-align: left;
 
             &:last-child {
                 margin: 0;
